--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "ws_flutter",
-    "short_name": "ws_flutter",
+    "name": "FL Chart App",
+    "short_name": "FL Chart App",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
